// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Group should match snapshot 1`] = `<AlertGroupInline />`;

exports[`Standard Alert Group is not a toast alert group 1`] = `
<AlertGroup>
  <AlertGroupInline>
    <ul
      aria-atomic={null}
      aria-live={null}
      className="pf-c-alert-group"
    >
      <li
        key="0"
      >
        <Alert
          key=".0"
          title="alert title"
          variant="danger"
        >
          <div
            aria-label="Danger Alert"
            className="pf-c-alert pf-m-danger"
            data-ouia-component-id="OUIA-Generated-Alert-danger-1"
            data-ouia-component-type="PF4/Alert"
            data-ouia-safe={true}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <AlertIcon
              variant="danger"
            >
              <div
                className="pf-c-alert__icon"
              >
                <ExclamationCircleIcon
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                </ExclamationCircleIcon>
              </div>
            </AlertIcon>
            <h4
              className="pf-c-alert__title"
            >
              <span
                className="pf-u-screen-reader"
              >
                Danger alert:
              </span>
              alert title
            </h4>
          </div>
        </Alert>
      </li>
    </ul>
  </AlertGroupInline>
</AlertGroup>
`;

exports[`Toast Alert Group contains expected modifier class 1`] = `
<AlertGroup
  isToast={true}
>
  <Portal
    containerInfo={
      <div>
        <ul
          class="pf-c-alert-group pf-m-toast"
        >
          <li>
            <div
              aria-label="Warning Alert"
              class="pf-c-alert pf-m-warning"
              data-ouia-component-id="OUIA-Generated-Alert-warning-1"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Warning alert:
                </span>
                alert title
              </h4>
              
            </div>
          </li>
        </ul>
      </div>
    }
  >
    <AlertGroupInline
      isToast={true}
    >
      <ul
        aria-atomic={null}
        aria-live={null}
        className="pf-c-alert-group pf-m-toast"
      >
        <li
          key="0"
        >
          <Alert
            key=".0"
            title="alert title"
            variant="warning"
          >
            <div
              aria-label="Warning Alert"
              className="pf-c-alert pf-m-warning"
              data-ouia-component-id="OUIA-Generated-Alert-warning-1"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe={true}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <AlertIcon
                variant="warning"
              >
                <div
                  className="pf-c-alert__icon"
                >
                  <ExclamationTriangleIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 576 512"
                      width="1em"
                    >
                      <path
                        d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      />
                    </svg>
                  </ExclamationTriangleIcon>
                </div>
              </AlertIcon>
              <h4
                className="pf-c-alert__title"
              >
                <span
                  className="pf-u-screen-reader"
                >
                  Warning alert:
                </span>
                alert title
              </h4>
            </div>
          </Alert>
        </li>
      </ul>
    </AlertGroupInline>
  </Portal>
</AlertGroup>
`;

exports[`alertgroup closes when alerts are closed 1`] = `
<AlertGroup
  appendTo={
    <body>
      <div />
      <div />
      <div />
      <div />
      <div>
        <ul
          class="pf-c-alert-group pf-m-toast"
        >
          <li>
            <div
              aria-label="Warning Alert"
              class="pf-c-alert pf-m-warning"
              data-ouia-component-id="OUIA-Generated-Alert-warning-1"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Warning alert:
                </span>
                alert title
              </h4>
              
            </div>
          </li>
        </ul>
      </div>
      <div />
      <div>
        <ul
          appendto="[object HTMLBodyElement]"
          class="pf-c-alert-group pf-m-toast"
        >
          <li>
            <div
              aria-atomic="false"
              aria-label="Default Alert"
              aria-live="polite"
              class="pf-c-alert"
              data-ouia-component-id="OUIA-Generated-Alert-default-1"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 896 1024"
                  width="1em"
                >
                  <path
                    d="M448,0 C465.333333,0 480.333333,6.33333333 493,19 C505.666667,31.6666667 512,46.6666667 512,64 L512,106 L514.23,106.45 C587.89,121.39 648.48,157.24 696,214 C744,271.333333 768,338.666667 768,416 C768,500 780,568.666667 804,622 C818.666667,652.666667 841.333333,684 872,716 C873.773676,718.829136 875.780658,721.505113 878,724 C890,737.333333 896,752.333333 896,769 C896,785.666667 890,800.333333 878,813 C866,825.666667 850.666667,832 832,832 L63.3,832 C44.9533333,831.84 29.8533333,825.506667 18,813 C6,800.333333 0,785.666667 0,769 C0,752.333333 6,737.333333 18,724 L24,716 L25.06,714.9 C55.1933333,683.28 77.5066667,652.313333 92,622 C116,568.666667 128,500 128,416 C128,338.666667 152,271.333333 200,214 C248,156.666667 309.333333,120.666667 384,106 L384,63.31 C384.166667,46.27 390.5,31.5 403,19 C415.666667,6.33333333 430.666667,0 448,0 Z M576,896 L576,897.08 C575.74,932.6 563.073333,962.573333 538,987 C512.666667,1011.66667 482.666667,1024 448,1024 C413.333333,1024 383.333333,1011.66667 358,987 C332.666667,962.333333 320,932 320,896 L576,896 Z"
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Default alert:
                </span>
                Test Alert
              </h4>
              <div
                class="pf-c-alert__action"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
              </div>
              
            </div>
          </li>
        </ul>
      </div>
    </body>
  }
  isToast={true}
>
  <Portal
    containerInfo={
      <div>
        <ul
          appendto="[object HTMLBodyElement]"
          class="pf-c-alert-group pf-m-toast"
        >
          <li>
            <div
              aria-atomic="false"
              aria-label="Default Alert"
              aria-live="polite"
              class="pf-c-alert"
              data-ouia-component-id="OUIA-Generated-Alert-default-1"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 896 1024"
                  width="1em"
                >
                  <path
                    d="M448,0 C465.333333,0 480.333333,6.33333333 493,19 C505.666667,31.6666667 512,46.6666667 512,64 L512,106 L514.23,106.45 C587.89,121.39 648.48,157.24 696,214 C744,271.333333 768,338.666667 768,416 C768,500 780,568.666667 804,622 C818.666667,652.666667 841.333333,684 872,716 C873.773676,718.829136 875.780658,721.505113 878,724 C890,737.333333 896,752.333333 896,769 C896,785.666667 890,800.333333 878,813 C866,825.666667 850.666667,832 832,832 L63.3,832 C44.9533333,831.84 29.8533333,825.506667 18,813 C6,800.333333 0,785.666667 0,769 C0,752.333333 6,737.333333 18,724 L24,716 L25.06,714.9 C55.1933333,683.28 77.5066667,652.313333 92,622 C116,568.666667 128,500 128,416 C128,338.666667 152,271.333333 200,214 C248,156.666667 309.333333,120.666667 384,106 L384,63.31 C384.166667,46.27 390.5,31.5 403,19 C415.666667,6.33333333 430.666667,0 448,0 Z M576,896 L576,897.08 C575.74,932.6 563.073333,962.573333 538,987 C512.666667,1011.66667 482.666667,1024 448,1024 C413.333333,1024 383.333333,1011.66667 358,987 C332.666667,962.333333 320,932 320,896 L576,896 Z"
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Default alert:
                </span>
                Test Alert
              </h4>
              <div
                class="pf-c-alert__action"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
              </div>
              
            </div>
          </li>
        </ul>
      </div>
    }
  >
    <AlertGroupInline
      appendTo={
        <body>
          <div />
          <div />
          <div />
          <div />
          <div>
            <ul
              class="pf-c-alert-group pf-m-toast"
            >
              <li>
                <div
                  aria-label="Warning Alert"
                  class="pf-c-alert pf-m-warning"
                  data-ouia-component-id="OUIA-Generated-Alert-warning-1"
                  data-ouia-component-type="PF4/Alert"
                  data-ouia-safe="true"
                >
                  <div
                    class="pf-c-alert__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 576 512"
                      width="1em"
                    >
                      <path
                        d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      />
                    </svg>
                  </div>
                  <h4
                    class="pf-c-alert__title"
                  >
                    <span
                      class="pf-u-screen-reader"
                    >
                      Warning alert:
                    </span>
                    alert title
                  </h4>
                  
                </div>
              </li>
            </ul>
          </div>
          <div />
          <div>
            <ul
              appendto="[object HTMLBodyElement]"
              class="pf-c-alert-group pf-m-toast"
            >
              <li>
                <div
                  aria-atomic="false"
                  aria-label="Default Alert"
                  aria-live="polite"
                  class="pf-c-alert"
                  data-ouia-component-id="OUIA-Generated-Alert-default-1"
                  data-ouia-component-type="PF4/Alert"
                  data-ouia-safe="true"
                >
                  <div
                    class="pf-c-alert__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 896 1024"
                      width="1em"
                    >
                      <path
                        d="M448,0 C465.333333,0 480.333333,6.33333333 493,19 C505.666667,31.6666667 512,46.6666667 512,64 L512,106 L514.23,106.45 C587.89,121.39 648.48,157.24 696,214 C744,271.333333 768,338.666667 768,416 C768,500 780,568.666667 804,622 C818.666667,652.666667 841.333333,684 872,716 C873.773676,718.829136 875.780658,721.505113 878,724 C890,737.333333 896,752.333333 896,769 C896,785.666667 890,800.333333 878,813 C866,825.666667 850.666667,832 832,832 L63.3,832 C44.9533333,831.84 29.8533333,825.506667 18,813 C6,800.333333 0,785.666667 0,769 C0,752.333333 6,737.333333 18,724 L24,716 L25.06,714.9 C55.1933333,683.28 77.5066667,652.313333 92,622 C116,568.666667 128,500 128,416 C128,338.666667 152,271.333333 200,214 C248,156.666667 309.333333,120.666667 384,106 L384,63.31 C384.166667,46.27 390.5,31.5 403,19 C415.666667,6.33333333 430.666667,0 448,0 Z M576,896 L576,897.08 C575.74,932.6 563.073333,962.573333 538,987 C512.666667,1011.66667 482.666667,1024 448,1024 C413.333333,1024 383.333333,1011.66667 358,987 C332.666667,962.333333 320,932 320,896 L576,896 Z"
                      />
                    </svg>
                  </div>
                  <h4
                    class="pf-c-alert__title"
                  >
                    <span
                      class="pf-u-screen-reader"
                    >
                      Default alert:
                    </span>
                    Test Alert
                  </h4>
                  <div
                    class="pf-c-alert__action"
                  >
                    <button
                      aria-disabled="false"
                      aria-label="Close"
                      class="pf-c-button pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Button-plain-1"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 352 512"
                        width="1em"
                      >
                        <path
                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                        />
                      </svg>
                    </button>
                  </div>
                  
                </div>
              </li>
            </ul>
          </div>
        </body>
      }
      isToast={true}
    >
      <ul
        appendTo={
          <body>
            <div />
            <div />
            <div />
            <div />
            <div>
              <ul
                class="pf-c-alert-group pf-m-toast"
              >
                <li>
                  <div
                    aria-label="Warning Alert"
                    class="pf-c-alert pf-m-warning"
                    data-ouia-component-id="OUIA-Generated-Alert-warning-1"
                    data-ouia-component-type="PF4/Alert"
                    data-ouia-safe="true"
                  >
                    <div
                      class="pf-c-alert__icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 576 512"
                        width="1em"
                      >
                        <path
                          d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                        />
                      </svg>
                    </div>
                    <h4
                      class="pf-c-alert__title"
                    >
                      <span
                        class="pf-u-screen-reader"
                      >
                        Warning alert:
                      </span>
                      alert title
                    </h4>
                    
                  </div>
                </li>
              </ul>
            </div>
            <div />
            <div>
              <ul
                appendto="[object HTMLBodyElement]"
                class="pf-c-alert-group pf-m-toast"
              >
                <li>
                  <div
                    aria-atomic="false"
                    aria-label="Default Alert"
                    aria-live="polite"
                    class="pf-c-alert"
                    data-ouia-component-id="OUIA-Generated-Alert-default-1"
                    data-ouia-component-type="PF4/Alert"
                    data-ouia-safe="true"
                  >
                    <div
                      class="pf-c-alert__icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 896 1024"
                        width="1em"
                      >
                        <path
                          d="M448,0 C465.333333,0 480.333333,6.33333333 493,19 C505.666667,31.6666667 512,46.6666667 512,64 L512,106 L514.23,106.45 C587.89,121.39 648.48,157.24 696,214 C744,271.333333 768,338.666667 768,416 C768,500 780,568.666667 804,622 C818.666667,652.666667 841.333333,684 872,716 C873.773676,718.829136 875.780658,721.505113 878,724 C890,737.333333 896,752.333333 896,769 C896,785.666667 890,800.333333 878,813 C866,825.666667 850.666667,832 832,832 L63.3,832 C44.9533333,831.84 29.8533333,825.506667 18,813 C6,800.333333 0,785.666667 0,769 C0,752.333333 6,737.333333 18,724 L24,716 L25.06,714.9 C55.1933333,683.28 77.5066667,652.313333 92,622 C116,568.666667 128,500 128,416 C128,338.666667 152,271.333333 200,214 C248,156.666667 309.333333,120.666667 384,106 L384,63.31 C384.166667,46.27 390.5,31.5 403,19 C415.666667,6.33333333 430.666667,0 448,0 Z M576,896 L576,897.08 C575.74,932.6 563.073333,962.573333 538,987 C512.666667,1011.66667 482.666667,1024 448,1024 C413.333333,1024 383.333333,1011.66667 358,987 C332.666667,962.333333 320,932 320,896 L576,896 Z"
                        />
                      </svg>
                    </div>
                    <h4
                      class="pf-c-alert__title"
                    >
                      <span
                        class="pf-u-screen-reader"
                      >
                        Default alert:
                      </span>
                      Test Alert
                    </h4>
                    <div
                      class="pf-c-alert__action"
                    >
                      <button
                        aria-disabled="false"
                        aria-label="Close"
                        class="pf-c-button pf-m-plain"
                        data-ouia-component-id="OUIA-Generated-Button-plain-1"
                        data-ouia-component-type="PF4/Button"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 352 512"
                          width="1em"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                          />
                        </svg>
                      </button>
                    </div>
                    
                  </div>
                </li>
              </ul>
            </div>
          </body>
        }
        aria-atomic={null}
        aria-live={null}
        className="pf-c-alert-group pf-m-toast"
      >
        <li
          key="0"
        >
          <Alert
            actionClose={
              <AlertActionCloseButton
                aria-label="Close"
                onClose={[MockFunction]}
              />
            }
            isLiveRegion={true}
            key=".0"
            title="Test Alert"
          >
            <div
              aria-atomic="false"
              aria-label="Default Alert"
              aria-live="polite"
              className="pf-c-alert"
              data-ouia-component-id="OUIA-Generated-Alert-default-1"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe={true}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <AlertIcon
                variant="default"
              >
                <div
                  className="pf-c-alert__icon"
                >
                  <BellIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 896 1024"
                      width="1em"
                    >
                      <path
                        d="M448,0 C465.333333,0 480.333333,6.33333333 493,19 C505.666667,31.6666667 512,46.6666667 512,64 L512,106 L514.23,106.45 C587.89,121.39 648.48,157.24 696,214 C744,271.333333 768,338.666667 768,416 C768,500 780,568.666667 804,622 C818.666667,652.666667 841.333333,684 872,716 C873.773676,718.829136 875.780658,721.505113 878,724 C890,737.333333 896,752.333333 896,769 C896,785.666667 890,800.333333 878,813 C866,825.666667 850.666667,832 832,832 L63.3,832 C44.9533333,831.84 29.8533333,825.506667 18,813 C6,800.333333 0,785.666667 0,769 C0,752.333333 6,737.333333 18,724 L24,716 L25.06,714.9 C55.1933333,683.28 77.5066667,652.313333 92,622 C116,568.666667 128,500 128,416 C128,338.666667 152,271.333333 200,214 C248,156.666667 309.333333,120.666667 384,106 L384,63.31 C384.166667,46.27 390.5,31.5 403,19 C415.666667,6.33333333 430.666667,0 448,0 Z M576,896 L576,897.08 C575.74,932.6 563.073333,962.573333 538,987 C512.666667,1011.66667 482.666667,1024 448,1024 C413.333333,1024 383.333333,1011.66667 358,987 C332.666667,962.333333 320,932 320,896 L576,896 Z"
                      />
                    </svg>
                  </BellIcon>
                </div>
              </AlertIcon>
              <h4
                className="pf-c-alert__title"
              >
                <span
                  className="pf-u-screen-reader"
                >
                  Default alert:
                </span>
                Test Alert
              </h4>
              <div
                className="pf-c-alert__action"
              >
                <AlertActionCloseButton
                  aria-label="Close"
                  onClose={[MockFunction]}
                >
                  <Button
                    aria-label="Close"
                    onClick={[MockFunction]}
                    variant="plain"
                  >
                    <ButtonBase
                      aria-label="Close"
                      innerRef={null}
                      onClick={[MockFunction]}
                      variant="plain"
                    >
                      <button
                        aria-disabled={false}
                        aria-label="Close"
                        className="pf-c-button pf-m-plain"
                        data-ouia-component-id="OUIA-Generated-Button-plain-1"
                        data-ouia-component-type="PF4/Button"
                        data-ouia-safe={true}
                        disabled={false}
                        onClick={[MockFunction]}
                        role={null}
                        type="button"
                      >
                        <TimesIcon
                          color="currentColor"
                          noVerticalAlign={false}
                          size="sm"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 352 512"
                            width="1em"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                            />
                          </svg>
                        </TimesIcon>
                      </button>
                    </ButtonBase>
                  </Button>
                </AlertActionCloseButton>
              </div>
            </div>
          </Alert>
        </li>
      </ul>
    </AlertGroupInline>
  </Portal>
</AlertGroup>
`;
